Sun Dec  3 22:11:22 CET 2000 Wichert Akkerman <wakkerma@debian.org>

  * dpkg-deb/extract.c: apply one of Adams do_fd_copy patches

Thu Nov 30 02:45:42 CET 2000 Wichert Akkerman <wakkerma@debian.org>

  * scripts/dpkg-statoverride.{pl,8}: 
    + add new --import option to import settings from /etc/suid.conf
    + fix ENOENT issues
    + use %owner consistently isntead of %owner and %user

Wed Nov 29 17:56:43 CET 2000 Wichert Akkerman <wakkerma@debian.org>

  * po/gl.po: updated

Tue 28 Nov 18:48:52 CET 2000 peter karlsson <peterk@debian.org>

  * po/sv.po: Terminology changes

Sat 25 Nov 22:05:19 CET 2000 peter karlsson <peterk@debian.org>

  * po/sv.po: Updated Swedish translation

Fri Nov 24 16:49:26 CET 2000 Wichert Akkerman <wakkerma@debian.org>

  * scripts/dpkg-scansources.pl: Fix getopt usage since perl5.6 complains
    about it.
  * doc/deb-old.5,doc/deb.5,main/dpkg.8,scripts/dpkg-name.1,
    split/dpkg-split.8 : update to reflect that dpkg-deb is in section 1

Thu Nov 23 19:13:21 CET 2000 Wichert Akkerman <wakkerma@debian.org>

  * lib/myopt.c: properly chomp read lines

Thu Nov 23 17:52:44 CET 2000 Wichert Akkerman <wakkerma@debian.org>

  * lib/fields.c, lib/dump.c: fix two memory leaks
  * More Adam Heath patches:
    + lib/mlib.c, include/dpkg.h.in: add new option for do_fd_copy to
      specify buffersize
    + dpkg-deb/build.c, lib/info.c, lib/showcright.c: update for new
      do_fd_copy
    + dpkg-deb/extract.c: use do_fd_copy to read data instead of reading
      per character.
  * lib/mlib.c: fix error reporting for reading data in do_fd_copy
  * optlib/Makefile.am: remove (can't believe this still existed!)
  * utils/Makefile.in: link md5sum with our own libintl if needed
  * archtable, scripts/dpkg-architecture.pl: add freebsd-i386
  * acconfig.h, configure.in, doc/Makefile.in: make building documentation
    and start-stop-daemon optional
  * main/help.c: only check for start-stop-daemon in checkpatch() if we
    build it
