@@ -121,10 +121,8 @@
 #define DSELECT      "dselect"
 #define DPKG         "dpkg"
 
-#define SAFEFILELIST "dpkg-safefilelist"
 #define TAR          "tar"
 #define GZIP         "gzip"
-#define CAT          "cat"
 #define RM           "rm"
 #define FIND         "find"
 #define SHELL        "sh"
@@ -199,7 +197,8 @@ void m_pipe(int fds[2]);
 void checksubprocerr(int status, const char *description, int sigpipeok);
 void waitsubproc(pid_t pid, const char *description, int sigpipeok);
 
-int do_fd_copy(int fd1, int fd2, int limit, char *desc);
+int do_fd_copy(int fd1, int fd2, int limit, char *desc, ...);
+int read_fd_into_buf(int fd, char *buf, int limit, char *desc, ...);
 
 extern volatile int onerr_abort;
 
